forgejoexp/ssh-tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejoexp-ssh-route
  namespace: forgejoexp
spec:
  parentRefs:
    - name: forgejoexp-gateway
      sectionName: ssh
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - name: forgejoexp-ssh
          port: 22
          group: ""
          kind: Service
          weight: 1
