forgejoexp/www-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejoexp-http-route
  namespace: forgejoexp
spec:
  parentRefs:
    - name: forgejoexp-gateway
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - gitexp.raft.lutris.house
  rules:
    - backendRefs:
        - name: forgejoexp-http
          port: 3000
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
